# BD103-Python

./: .flake8  .gitignore  .prettierignore  .replit  CONTRIBUTING.md  LICENSE  README.md  main.sh  mkdocs.yml  onboot.sh  pyproject.toml  replit.nix  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: black.yml  lint.yml  main.yml  publish.yml  test.yml
BD103.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bd103/: __init__.py  __main__.py  clear.py  color.py  colorhex.py  console.py  funansi.py  griddy.py  hex.py  load.py  parser.py  pkgdev.py  scripts.py  scroll.py  test.py
bd103/engine/: __init__.py  textdump.py
bd103/shared/: funansi.py
cmd/: build.sh  newtest.sh  pip.sh  rm.sh
docs/: .buildinfo  404.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml
docs/_modules/: index.html
docs/_modules/bd103/: decorators.html  richtext.html
docs/_modules/bd103/data/: hex.html
docs/_modules/bd103/ext/: trio.html
docs/_modules/bd103/shared/: colorhex.html  hex.html  (+1 more)
docs/_sources/api/: shared.rst.txt
docs/_static/: main.css  moonwalk.css
docs/api/: api.html  decorators.html  richtext.html  shared.html
docs/api/data/: data.html  hex.html
docs/api/ext/: ext.html  trio.html
docs/api/shared/: shared.html
docs/color/: index.html
docs/search/: search_index.json
docsrc/: build.sh  conf.py  index.rst
docsrc/_static/: main.css  moonwalk.css  pygments.css
docsrc/_templates/: layout.html
docsrc/api/: api.rst  decorators.rst  richtext.rst
docsrc/api/data/: data.rst  hex.rst
docsrc/api/ext/: ext.rst
docsrc/api/shared/: shared.rst
src/: color.md  index.md
src/bd103/: __init__.py  decorators.py  richtext.py
src/bd103/data/: __init__.py  hex.py
src/bd103/ext/: __init__.py  trio.py
src/bd103/shared/: __init__.py  colorhex.py  funansi.py  hex.py
tests/: test_decorators.py  test_main.py  test_richtext.py
tests/data/: test_colorhex.py  test_hex.py
tests/ext/: test_trio.py
(+3 files in other folders)
