[tool.poetry]
name = "BD103"
version = "1.0.0"
description = "BD103's Python Package"
authors = ["BD103 <dont@stalk.me>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://bd103.thedev.id"
repository = "https://github.com/BD103/BD103-Python" 

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
