[tool.poetry]
name = "BD103"
version = "2.0.0"
description = "BD103's Python Package"
authors = ["BD103 <dont@stalk.me>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://bd103.github.io"
repository = "https://github.com/BD103/BD103-Python" 

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.scripts]

[tool.black]
line-length = 88
target-version = ["py38"]
extend-exclude = '''
/(
    | .venv
    | bin
)/
'''

[tool.isort]
profile = "black"
extend_skip = []

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
