[tool.poetry]
name = "BD103"
version = "2.0.0rc1"
description = "BD103's Python Package"
authors = ["BD103 <dont@stalk.me>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://bd103.github.io"
repository = "https://github.com/BD103/BD103-Python" 

[tool.poetry.dependencies]
python = "^3.9"
sphinx = { version = "^4.3.1", optional = true }
trio = { version = "^0.19.0", optional = true }

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"

[tool.poetry.extras]
docs = ["sphinx"]
ext = ["trio"]

[tool.poetry.scripts]

[tool.black]
line-length = 88
target-version = ["py38"]
extend-exclude = '''
/(
    | .venv
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
